[package]
name = "swmr-cell"
version = "0.1.0"
edition = "2024"
authors = ["ShaoG <shaog.rs@gmail.com>"]
description = "A thread-safe single-writer multi-reader cell with wait-free reads and version-based garbage collection"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ShaoG-R/swmr-cell"
homepage = "https://github.com/ShaoG-R/swmr-cell"
documentation = "https://docs.rs/swmr-cell"
keywords = ["swmr", "wait-free", "rcu", "concurrency", "lock-free"]
categories = ["concurrency", "data-structures", "memory-management"]

[dependencies]
antidote = "1.0.0"
loom = { version = "0.7", optional = true }

[dev-dependencies]
crossbeam-epoch = "0.9"
criterion = { version = "0.7", features = ["html_reports"] }

[features]
loom = ["dep:loom"]
