[package]
name = "swmr-cell"
version = "0.1.7"
edition = "2024"
authors = ["ShaoG <shaog.rs@gmail.com>"]
description = "A thread-safe single-writer multi-reader cell with wait-free reads and version-based garbage collection"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ShaoG-R/swmr-cell"
homepage = "https://github.com/ShaoG-R/swmr-cell"
documentation = "https://docs.rs/swmr-cell"
keywords = ["swmr", "wait-free", "rcu", "concurrency", "lock-free"]
categories = ["concurrency", "data-structures", "memory-management"]

[dependencies]
antidote = { version = "1.0.0", optional = true }
spin = { version = "0.10", optional = true }
loom = { version = "0.7", optional = true }

[dev-dependencies]
crossbeam-epoch = "0.9"
criterion = { version = "0.7", features = ["html_reports"] }

[features]
default = ["std"]
std = ["dep:antidote"]
loom = ["dep:loom"]
